--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -320,11 +320,11 @@
         <h4 class="plugin_summary">Easy Podcasting Plugin</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_podcast</dt>
-            <dd class="plugin_version">Version 1.40 (GPL, Last Updated 2019-08-18)</dd>
+            <dd class="plugin_version">Version 1.41 (GPL, Last Updated 2020-01-23)</dd>
             <dd class="plugin_maintainers">Grischa Brockhaus, Hannes Gassert, Garvin Hicking, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
-        <p class="plugin_description">Adds &quot;podcasting&quot; capabilities hinzu (RSS enclosure, Video/Sound-Player)</p>
+        <p class="plugin_description">Adds &quot;podcasting&quot; capabilities (RSS enclosure, Video/Sound-Player)</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_podcast.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_podcast">GitHub</a></li>
@@ -496,7 +496,7 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 6.07 (GPL, Last Updated 2020-01-07)</dd>
+            <dd class="plugin_version">Version 6.08 (GPL, Last Updated 2020-01-23)</dd>
             <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian Styx, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.9.0</dd>
         </dl>
@@ -576,7 +576,7 @@
         <h4 class="plugin_summary">Uses TinyMCE as WYSIWYG editor</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_tinymce</dt>
-            <dd class="plugin_version">Version 1.15 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_version">Version 1.15 (GPL, Last Updated 2020-01-23)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Grischa Brockhaus, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -676,7 +676,7 @@
         <h4 class="plugin_summary">DBClean</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_dbclean</dt>
-            <dd class="plugin_version">Version 0.4 (GPL, Last Updated 2019-05-06)</dd>
+            <dd class="plugin_version">Version 0.5 (GPL, Last Updated 2020-01-23)</dd>
             <dd class="plugin_maintainers">Malte Paskuda, Matthias Mees, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -692,7 +692,7 @@
         <h4 class="plugin_summary">DSGVO / GDPR: General Data Protection Regulation</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_dsgvo_gdpr</dt>
-            <dd class="plugin_version">Version 1.81 (GPL, Last Updated 2019-12-09)</dd>
+            <dd class="plugin_version">Version 1.82 (GPL, Last Updated 2020-01-23)</dd>
             <dd class="plugin_maintainers">Serendipity Team, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -820,7 +820,7 @@
         <h4 class="plugin_summary">POPfetcher</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_popfetcher</dt>
-            <dd class="plugin_version">Version 1.52 (GPL, Last Updated 2019-09-09)</dd>
+            <dd class="plugin_version">Version 1.52 (GPL, Last Updated 2020-01-23)</dd>
             <dd class="plugin_maintainers">Jason Levitt</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -916,7 +916,7 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 6.07 (GPL, Last Updated 2020-01-07)</dd>
+            <dd class="plugin_version">Version 6.08 (GPL, Last Updated 2020-01-23)</dd>
             <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian Styx, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.9.0</dd>
         </dl>
@@ -1016,7 +1016,7 @@
         <h4 class="plugin_summary">Random Blog Description</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_randomblogdescription</dt>
-            <dd class="plugin_version">Version 0.7 (GPL, Last Updated 2019-10-22)</dd>
+            <dd class="plugin_version">Version 0.7 (GPL, Last Updated 2020-01-23)</dd>
             <dd class="plugin_maintainers">Florian Anderiasch</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -1184,7 +1184,7 @@
         <h4 class="plugin_summary">Options for trustworthy editing on multi-user blogs / HTMLPurifier</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_xsstrust</dt>
-            <dd class="plugin_version">Version 0.8 (GPL, Last Updated 2017-03-14)</dd>
+            <dd class="plugin_version">Version 0.8 (GPL, Last Updated 2020-01-23)</dd>
             <dd class="plugin_maintainers">Garvin Hicking</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -1412,7 +1412,7 @@
         <h4 class="plugin_summary">Options for trustworthy editing on multi-user blogs / HTMLPurifier</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_xsstrust</dt>
-            <dd class="plugin_version">Version 0.8 (GPL, Last Updated 2017-03-14)</dd>
+            <dd class="plugin_version">Version 0.8 (GPL, Last Updated 2020-01-23)</dd>
             <dd class="plugin_maintainers">Garvin Hicking</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -1660,7 +1660,7 @@
         <h4 class="plugin_summary">DSGVO / GDPR: General Data Protection Regulation</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_dsgvo_gdpr</dt>
-            <dd class="plugin_version">Version 1.81 (GPL, Last Updated 2019-12-09)</dd>
+            <dd class="plugin_version">Version 1.82 (GPL, Last Updated 2020-01-23)</dd>
             <dd class="plugin_maintainers">Serendipity Team, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -1788,7 +1788,7 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 6.07 (GPL, Last Updated 2020-01-07)</dd>
+            <dd class="plugin_version">Version 6.08 (GPL, Last Updated 2020-01-23)</dd>
             <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian Styx, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.9.0</dd>
         </dl>
@@ -2668,7 +2668,7 @@
         <h4 class="plugin_summary">Options for trustworthy editing on multi-user blogs / HTMLPurifier</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_xsstrust</dt>
-            <dd class="plugin_version">Version 0.8 (GPL, Last Updated 2017-03-14)</dd>
+            <dd class="plugin_version">Version 0.8 (GPL, Last Updated 2020-01-23)</dd>
             <dd class="plugin_maintainers">Garvin Hicking</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -2772,7 +2772,7 @@
             <dd class="plugin_maintainers">&lt;a href=&quot;https://github.com/kleinerChemiker&quot; target=&quot;_blank&quot;&gt;kleinerChemiker&lt;/a&gt;</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
-        <p class="plugin_description">This plugin adds extendet Google Analytic funcionality to youre Page like tracking external links or download links.</p>
+        <p class="plugin_description">This plugin adds extended Google Analytic functionality to your Page like tracking external links or download links.</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_google_analytics.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_google_analytics">GitHub</a></li>
@@ -2784,7 +2784,7 @@
         <h4 class="plugin_summary">Karma</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_karma</dt>
-            <dd class="plugin_version">Version 2.16 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_version">Version 2.17 (GPL, Last Updated 2020-01-23)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Grischa Brockhaus, Judebert, Gregor Voeltz, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
