--- a/hc/en/database.html
+++ b/hc/en/database.html
@@ -192,7 +192,7 @@
                       <li><span class="var">ip</span>: IP of the comment’s author</li>
                       <li><span class="var">body</span>: The comment body</li>
                       <li><span class="var">type</span>: Comment type (trackback, comment, pingback)</li>
-                      <li><span class="var">subscribed</span>: Whether the comment’s author wants subscription notifications of more comments</li>
+                      <li><span class="var">subscribed</span>: String bool ("true|false") Whether the comment’s author wants subscription notifications of more comments</li>
                       <li><span class="var">status</span>: Whether the comment is approved/pending</li>
                       <li><span class="var">referer</span>: URL of the referrer</li>
                     </ul>
@@ -212,10 +212,10 @@
                       <li><span class="var">exflag</span>: Boolean to indicate if entry has extended body</li>
                       <li><span class="var">author</span>: Name of the entry’s author</li>
                       <li><span class="var">authorid</span>: Foreign key to serendipity_authors.id</li>
-                      <li><span class="var">isdraft</span>: Boolean to indicate if entry is a draft</li>
-                      <li><span class="var">allow_comments</span>: Boolean to indicate if comments are allowed</li>
+                      <li><span class="var">isdraft</span>: String bool ("true|false") to indicate if entry is a draft</li>
+                      <li><span class="var">allow_comments</span>: String bool ("true|false") to indicate if comments are allowed</li>
                       <li><span class="var">last_modified</span>: Timestamp of last modification</li>
-                      <li><span class="var">moderate_comments</span>: Boolean to indicate if comments are moderated</li>
+                      <li><span class="var">moderate_comments</span>: String bool ("true|false") to indicate if comments are moderated</li>
                     </ul>
 
                     <h3 id="docs-serendipity_references">serendipity_references</h3>
