hc::code-priner: Deprecate PP wysiwygToolbar

--- a/hc/en/code-primer.html
+++ b/hc/en/code-primer.html
@@ -496,7 +496,7 @@ print_r($entries);
 
 <ul class="plainList">
   <li><code>$serendipity['wysiwyg']</code>: Whether to use the WYSIWYG editor</li>
-  <li><code>$serendipity['wysiwygToolbar']</code>: Defines the toolbar palette of the WYSIWYG editor</li>
+  <li><code>$serendipity['wysiwygToolbar']</code>: Defines the toolbar palette of the WYSIWYG editor. [Removed with Styx 3.0]</li>
   <li><code>$serendipity['mail_comments']</code>: Boolean whether a user receives comments to his entries via mail</li>
   <li><code>$serendipity['mail_trackbacks']</code>: Boolean whether a user receives trackbacks to his entries via mail</li>
   <li><code>$serendipity['no_create']</code>: If set, the author has no write permissions to anything in the Backend</li>
