--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -352,8 +352,8 @@
         <h4 class="plugin_summary">Geotag</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_geotag</dt>
-            <dd class="plugin_version">Version 1.36 (GPL, Last Updated 2017-02-02)</dd>
-            <dd class="plugin_maintainers">Zoran Kovacevic, Grischa Brockhaus, Matthias Gutjahr</dd>
+            <dd class="plugin_version">Version 1.37 (GPL, Last Updated 2020-03-11)</dd>
+            <dd class="plugin_maintainers">Zoran Kovacevic, Grischa Brockhaus, Matthias Gutjahr, Martin Sewelies</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Allows entries to be geotagged with coordinates</p>
