--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -2296,9 +2296,9 @@
         <h4 class="plugin_summary">Photoblog Entries</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_photoblog</dt>
-            <dd class="plugin_version">Version 1.8 (GPL, Last Updated 2020-04-01)</dd>
-            <dd class="plugin_maintainers">Cameron MacFarland</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
+            <dd class="plugin_version">Version 1.9 (GPL, Last Updated 2020-04-01)</dd>
+            <dd class="plugin_maintainers">Cameron MacFarland, Ian Styx</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">Adds a single image to an entry.</p>
         <ul class="plugin_actions">
