--- a/plugins/inc/bygroups_sidebar_en.htm
+++ b/plugins/inc/bygroups_sidebar_en.htm
@@ -320,8 +320,8 @@
         <h4 class="plugin_summary">Link List</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_linklist</dt>
-            <dd class="plugin_version">Version 1.25 (GPL, Last Updated 2019-08-18)</dd>
-            <dd class="plugin_maintainers">Matthew Groeninger, Omid Mottaghi Rad</dd>
+            <dd class="plugin_version">Version 1.26 (GPL, Last Updated 2020-04-02)</dd>
+            <dd class="plugin_maintainers">Matthew Groeninger, Omid Mottaghi Rad, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Links manager - Shows your favorite links in the sidebar.</p>
