--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -1544,8 +1544,8 @@
         <h4 class="plugin_summary">Share Buttons</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_social</dt>
-            <dd class="plugin_version">Version 0.18 (GPL, Last Updated 2019-08-09)</dd>
-            <dd class="plugin_maintainers">onli, Matthias Mees, Thomas Hochstein, Ian Styx, Mario Hommel</dd>
+            <dd class="plugin_version">Version 0.20 (GPL, Last Updated 2020-04-05)</dd>
+            <dd class="plugin_maintainers">onli, Matthias Mees, Thomas Hochstein, Ian Styx, Mario Hommel, Thomas Hochstein</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">Show social share buttons for services like Facebook and Twitter using shariff.</p>
