themes: Add a note to truth theme

--- a/themes/inc/themes_list.htm
+++ b/themes/inc/themes_list.htm
@@ -99,7 +99,7 @@
 <li><a href="#terrafirma">Terrafirma</a></li>
 <li><a href="#toolbox">Tool-Box</a></li>
 <li><a href="#translucency">Translucency</a></li>
-<li><a href="#truth">Truth</a></li>
+<li><a href="#truth">Truth (contains author link notes)</a></li>
 <li><a href="#wp-clone">WP-clone</a></li>
 <li><a href="#dreisechzig">XBox 360 (dreisechzig)</a></li>
 <li><a href="#xkur">Xkur</a></li>
