hc::code-primers: Reference Zend-db remove

--- a/hc/en/code-primer.html
+++ b/hc/en/code-primer.html
@@ -236,7 +236,7 @@ print_r($entries);
   <li><strong>Smarty</strong> for our templating infrastructure</li>
   <li><strong>composer</strong> for library maintenance</li>
   <li><strong>katzgrau/klogger</strong>, <strong>psr</strong> as a central low-level logging facility</li>
-  <li><strong>zendframework/zend-db/</strong> as an (optional) database layer intermediate</li>
+  <li><strong>zendframework/zend-db/</strong> as an (optional) database layer intermediate [Removed with Styx 3.0]</li>
   <li><strong>create_release.sh</strong> is the script we use to bundle releases</li>
   <li><strong>serendipity_generateFTPChecksums.php</strong> is the code used by the “create_release.sh” to create the integrity <strong>checksums.inc.php</strong> file</li>
 </ul>
@@ -327,7 +327,7 @@ print_r($entries);
 <p>We offer those database layers, which all implement an identical interface across all layers:</p>
 
 <ul>
-  <li><strong>generic</strong>: zendframework-DB adapter</li>
+  <li><strong>generic</strong>: zendframework-DB adapter [Removed with Styx 3.0]</li>
   <li><strong>mysql</strong>: MySQL databases</li>
   <li><strong>mysqli</strong>: MySQL databases (PHP 5.5+ compatible Backend, better performance)</li>
   <li><strong>pdo-postgres</strong>: PDO-Postgresql driver (requires PHP PDO extension)</li>
