hc::installation: Fix typo in 104af877175f41439abae6db054c6fa7db9522dc

--- a/hc/en/installation.html
+++ b/hc/en/installation.html
@@ -155,7 +155,7 @@
     <li>Check into Maintenance section. Check for "Plugin Cleanup Manager" and perform a local plugin zombie check. Remove any shown plugins in which you are not personally involved as a developer. Now do the same with "Theme Cleanup Manager".</li>
     <li>All is neat and looks ok? Great! Now, open up PhpMyAdmin or your Terminal and do pull another full database backup.</li>
     <li>Perform a database UTF8MB4 migration in the Maintenance "<em>Database: UTF-8-MB4 migration</em>" section. If this is possible on your system, you have a <em>examine</em> and probably a <em>perform</em> button. Read the info notes about what is going to happen. Follow the migration and migration guide as long as it is necessary. At the end you get a green OK message telling you a success "UTF-8-MB4 charset".</li>
-    <li>Now you are ready to chill back and have a fresh look around. But there is more to do for you. You still have to care about personal themes (<em>remember what the upgrade task were talking about</em>). And you need some backend <strong>finetuning</strong> by option changes/tweaks:</li>
+    <li>Now you are ready to chill back and have a fresh look around. But there is more to do for you. You still have to care about personal themes (<em>remember what the upgrade tasks were talking about</em>). And you need some backend <strong>finetuning</strong> by option changes/tweaks:</li>
     <li><strong>Read on</strong> in the following: <a href="https://ophian.github.io/hc/en/installation.html#user-content-the-hitchhikers-guide-to-styx-backend-tuning">"<em>The hitchhikers guide to Upgraders Styx Backend tuning</em>"</a>.</li>
 </ul>
 
