hc::installation: Fix title in 104af877175f41439abae6db054c6fa7db9522dc

--- a/hc/en/installation.html
+++ b/hc/en/installation.html
@@ -138,7 +138,7 @@
 <p>The following Guide here was originally meant to help migrating this "Origin-to-Styx" process to first release 2.1.0, over to 2.2, 2.3 and 2.4.0. In a second step this was reworked for Serendipity Styx 2.6 better pointing you back to 2.4 for the autoupdater. Now that Serendipity Styx stable hit version 2.9.5, it was checked again. The 2.9(.5) branch is the recommended version for upgraders! Do not do this with upcoming 3.0, since a lot of helper tasks were removed!</p>
 <p><strong>Styx</strong> has come a long way with lots of changes. It would require to inspect and update this guide in deep to jump to latest release <strong>without any</strong> possible flaws. Needless to say: Best of all is a complete <strong>new</strong> installation.</p>
 
-<h4>Normal Upgrade by named package (FTP or WGET like tools)</h4>
+<h4>Normal upgrade migration by named package (FTP or WGET like tools)</h4>
 <p>Did I say: <strong><em>Backup</em></strong>? No? Then fully backup your blog and your database!</p>
 <p>Get Styx 2.9.5 (serendipity-2.9.5.zip) and deflate it. It will unzip to a "<code>serendipity/</code>" directory (<em>Note, that GitHub source zips are dev versions and have another parent directory</em>).</p>
 <ul>
