hc::installation: Improve a paragraph in 104af877175f41439abae6db054c6fa7db9522dc

--- a/hc/en/installation.html
+++ b/hc/en/installation.html
@@ -135,12 +135,12 @@
 <h3 id="user-content-the-important-upgraders-howto---step-by-step-guide">The important Upgraders HowTo - Step by Step Guide:</h3>
 <p><strong>Preamble:</strong> (<em>If not using Styx already, and having done that before...</em>)</p>
 <p><strong>Please note</strong>: The more Serendipity Styx develops and time passes by, the more it differs from the origin, since having already passed 4K commit changes against S9y Origin! The normal version upgrade manager includes all tasks which are necessary to successful proceed between versions until Serendipity S9y Origin 2.1.</p>
-<p>The following Guide here was originally meant to help migrating this "Origin-to-Styx" process to first release 2.1.0, over to 2.2, 2.3 and 2.4.0. In a second step this was reworked for Serendipity Styx 2.6 better pointing you back to 2.4 for the autoupdater. Now that Serendipity Styx stable hit version 2.9.5, it was checked again. The 2.9(.5) branch is the recommended version for upgraders! Do not do this with upcoming 3.0, since a lot of helper tasks were removed!</p>
+<p>The following Guide here was originally meant to help migrating this "Origin-to-Styx" process to first release 2.1.0, over to 2.2, 2.3 and 2.4.0. In a second step this was reworked for Serendipity Styx 2.6 better pointing you back to 2.4 for the autoupdater. Now that Serendipity Styx stable hit version 2.9.5, it was checked again. The 2.9(.5) branch is the recommended version for upgraders! Do not do this with upcoming 3.0, since a lot of helper tasks were removed! <strong>That said</strong>, if you are on Styx already, jumping to upcoming 3.0 will be as easy as ever.</p>
 <p><strong>Styx</strong> has come a long way with lots of changes. It would require to inspect and update this guide in deep to jump to latest release <strong>without any</strong> possible flaws. Needless to say: Best of all is a complete <strong>new</strong> installation.</p>
 
 <h4>Normal upgrade migration by named package (FTP or WGET like tools)</h4>
 <p>Did I say: <strong><em>Backup</em></strong>? No? Then fully backup your blog and your database!</p>
-<p>Get Styx 2.9.5 (serendipity-2.9.5.zip) and deflate it. It will unzip to a "<code>serendipity/</code>" directory (<em>Note, that GitHub source zips are dev versions and have another parent directory</em>).</p>
+<p>Get Styx 2.9.5 (serendipity-2.9.5.zip) and deflate it. It will unzip to a "<code>serendipity/</code>" directory (<em>Note, that GitHub source zips are DEV versions and have another parent directory</em>).</p>
 <ul>
     <li><strong><u>PREPARATIONS:</u></strong></li>
     <li><strong>First</strong> of all, <strong>hide</strong> your normal blog site from the public by using a simple .htaccess restriction! (<a href="https://ophian.github.io/hc/en/faq/#docs-how-do-i-upgrade-serendipity" target="_new">see here</a>.)</li>
