hc::installation: Improve a rhetoric questionaire in 104af877175f41439abae6db054c6fa7db9522dc

--- a/hc/en/installation.html
+++ b/hc/en/installation.html
@@ -139,7 +139,7 @@
 <p><strong>Styx</strong> has come a long way with lots of changes. It would require to inspect and update this guide in deep to jump to latest release <strong>without any</strong> possible flaws. Needless to say: Best of all is a complete <strong>new</strong> installation.</p>
 
 <h4>Normal upgrade migration by named package (FTP or WGET like tools)</h4>
-<p>Did I say: <strong><em>Backup</em></strong>? No? Then fully backup your blog and your database!</p>
+<p>Did I already say: <strong><em>Back it up</em></strong>? No? Then fully backup your blog and your database!</p>
 <p>Get Styx 2.9.5 (serendipity-2.9.5.zip) and deflate it. It will unzip to a "<code>serendipity/</code>" directory (<em>Note, that GitHub source zips are DEV versions and have another parent directory</em>).</p>
 <ul>
     <li><strong><u>PREPARATIONS:</u></strong></li>
