--- a/hc/en/installation.html
+++ b/hc/en/installation.html
@@ -198,6 +198,7 @@
     <li> [ <strong>Update</strong> ]:<br>With Styx 2.1++ releases, the Spartacus custom mirror g.[5] and the general setting h.[8] are already preset for <strong>new</strong> installations.</li>
     <li> [ <strong>Update</strong> ]:<br>Newer versions of the Serendipity Autoupdater from this repository already also have [6] and [7] preset for <strong>new</strong> installations.</li>
     <li> [ <strong>Update</strong> ]:<br>Since the Serendipity Styx 2.6-beta1 release (read the <a href="https://ophian.github.io/blog/"><em>BLOG NOTES</em></a> and scroll down to to the 2.6-beta1), you <strong>don't</strong> need to self-care about these URLs any more, neither for Spartacus, the Configuration, nor the Autoupdater!</li>
+    <li> [ <strong>Update</strong> ]:<br>Since the Serendipity Styx 2.9.5 release (read the <a href="https://ophian.github.io/blog/"><em>BLOG NOTES</em></a>) the <u>recommended</u> way of doing a <strong><em>migration</em> upgrade</strong> is the normal upgrade method (<em>read about it above in the upgrade guide</em>) and <strong>not</strong> the Autoupdater!</li>
 </ol>
 
 <hr>
