--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -352,7 +352,7 @@
         <h4 class="plugin_summary">Geotag</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_geotag</dt>
-            <dd class="plugin_version">Version 1.37 (GPL, Last Updated 2020-03-11)</dd>
+            <dd class="plugin_version">Version 1.38 (GPL, Last Updated 2020-05-15)</dd>
             <dd class="plugin_maintainers">Zoran Kovacevic, Grischa Brockhaus, Matthias Gutjahr, Martin Sewelies</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -496,7 +496,7 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 6.10 (GPL, Last Updated 2020-04-17)</dd>
+            <dd class="plugin_version">Version 6.11 (GPL, Last Updated 2020-05-15)</dd>
             <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian Styx, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.9.0</dd>
         </dl>
@@ -916,7 +916,7 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 6.10 (GPL, Last Updated 2020-04-17)</dd>
+            <dd class="plugin_version">Version 6.11 (GPL, Last Updated 2020-05-15)</dd>
             <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian Styx, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.9.0</dd>
         </dl>
@@ -1408,6 +1408,38 @@
         </ul>
     </div>
 
+    <div id="serendipity_event_osm" class="plugin">
+        <h4 class="plugin_summary">OpenStreetMap integration</h4>
+        <dl class="plugin_meta">
+            <dt class="plugin_name">serendipity_event_osm</dt>
+            <dd class="plugin_version">Version 0.4 (GPL, Last Updated 2020-05-15)</dd>
+            <dd class="plugin_maintainers">Martin Sewelies</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.3</dd>
+        </dl>
+        <p class="plugin_description">Provides an interactive map with *.gpx uploads and tagged geo data.</p>
+        <ul class="plugin_actions">
+            <li class="plugin_download"><a href="#additional_plugins/serendipity_event_osm.zip">Download</a></li>
+            <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_osm">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_osm" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_osm/ChangeLog">ChangeLog</a></li>
+        </ul>
+    </div>
+
+    <div id="serendipity_event_static_osm" class="plugin">
+        <h4 class="plugin_summary">OpenStreetMap static files</h4>
+        <dl class="plugin_meta">
+            <dt class="plugin_name">serendipity_event_static_osm</dt>
+            <dd class="plugin_version">Version 0.4 (GPL, Last Updated 2020-05-15)</dd>
+            <dd class="plugin_maintainers">Martin Sewelies</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.3</dd>
+        </dl>
+        <p class="plugin_description">Includes scripts and stylesheets for OpenStreetMap support.</p>
+        <ul class="plugin_actions">
+            <li class="plugin_download"><a href="#additional_plugins/serendipity_plugin_static_osm.zip">Download</a></li>
+            <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_plugin_static_osm">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_static_osm" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_osm/ChangeLog">ChangeLog</a></li>
+        </ul>
+    </div>
+
     <div id="serendipity_event_xsstrust" class="plugin">
         <h4 class="plugin_summary">Options for trustworthy editing on multi-user blogs / HTMLPurifier</h4>
         <dl class="plugin_meta">
@@ -1788,7 +1820,7 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 6.10 (GPL, Last Updated 2020-04-17)</dd>
+            <dd class="plugin_version">Version 6.11 (GPL, Last Updated 2020-05-15)</dd>
             <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian Styx, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.9.0</dd>
         </dl>
