hc::faq: Add migrational and 3.0 upgrade hint

--- a/hc/en/faq/index.html
+++ b/hc/en/faq/index.html
@@ -339,7 +339,9 @@
 <h4 id="docs-how-do-i-upgrade-serendipity">How do I upgrade Serendipity?</h4>
 
 <div>
-    <p>Serendipity has an automated upgrade system. You can upgrade from any Serendipity version starting from 0.4 to the latest version, even nightlies/snapshots - and you will not loose any previous content. First of all, you should make a backup of your existing installation by copying your whole directory and by creating a Database dump (use phpMyAdmin or something similar).</p>
+    <p>Serendipity has an automated upgrade system. You can upgrade from any Serendipity version starting from 0.4 to the latest version in the Styx 2.9 branch, even nightlies/snapshots - and you will not loose any previous content. Version 3.0 changes this backward compatibility! First of all, you should make a backup of your existing installation by copying your whole directory and by creating a Database dump (use phpMyAdmin or something similar).</p>
+
+    <p><strong>Migrational S9y Upgraders</strong> should read the help centers <a href="https://ophian.github.io/hc/en/installation.html#user-content-the-important-upgraders-howto---step-by-step-guide">important upgraders guide</a> carefully.</p>
 
     <p>After you have done that, you only need to extract the new Serendpipity release files over your old directory. Make sure that you never delete the <code>serendipity_config_local.inc.php</code> file, as it contains the most vital Serendipity configuration data.</p>
 
