hc::faq: Fix a typo

--- a/hc/en/faq/index.html
+++ b/hc/en/faq/index.html
@@ -343,7 +343,7 @@
 
     <p><strong>Migrational S9y Upgraders</strong> should read the help centers <a href="https://ophian.github.io/hc/en/installation.html#user-content-the-important-upgraders-howto---step-by-step-guide">important upgraders guide</a> carefully.</p>
 
-    <p>After you have done that, you only need to extract the new Serendpipity release files over your old directory. Make sure that you never delete the <code>serendipity_config_local.inc.php</code> file, as it contains the most vital Serendipity configuration data.</p>
+    <p>After you have done that, you only need to extract the new Serendipity release files over your old directory. Make sure that you never delete the <code>serendipity_config_local.inc.php</code> file, as it contains the most vital Serendipity configuration data.</p>
 
     <p><strong>SECURITY RECOMMENDATION:</strong>: To make sure that only you are authorized to execute the update, either use the or edit your .htaccess file to block access only to your current IP or create a username/password combination, as outlined in the following <a href="#docs-locking-the-blog-during-the-upgrade">lock notes</a></p>
 
