hc::interface: Interlink detailled media migration task page

--- a/hc/en/admin-interface.html
+++ b/hc/en/admin-interface.html
@@ -139,7 +139,7 @@
                           <li><strong>Import data:</strong> Import data from another blog/cms system. See <a href="import-export.html">Import/Export Entries</a>.</li>
                           <li><strong>Export entries:</strong> Export data from Serendipity. See <a href="import-export.html">Import/Export Entries</a>.</li>
                           <li><strong>Verify Installation Integrity:</strong> Check Serendipity core distribution files for any potential tampering or modifications.</li>
-                          <li><strong>Rebuild Thumbs:</strong> Rebuild thumbnail images of all media items. This can be very useful if you change thumbnail dimensions in the site’s <a href="configuration.html">configuration</a> or if images become accidentally corrupted.</li>
+                          <li><strong>Rebuild Thumbs:</strong> Rebuild thumbnail images of all media items. This can be very useful if you change thumbnail dimensions in the site’s <a href="configuration.html">configuration</a> or if images become accidentally corrupted. For Styx 3.0 there is an additional <a href="media-migration-tasks.html">detailed description</a> available, recommended to read for migrational upgraders!</li>
                           <li><strong>Hooked plugin tools:</strong> Changelog/Log viewer, Theme and Plugin cleanup Managers, Database migrations, etc.</li>
                         </ul>
                     </ul>
